--- a/index.html
+++ b/index.html
@@ -32,15 +32,6 @@
 					</span>
 				</h2>
 				<div id="unfinishedTasks">
-					<!-- <div class="taskBox">	
-						<div class="taskBoxLeft">
-							<span>date</span>
-							<p>Įvesta užduotis 1</p>
-						</div>
-						<div class="taskBoxRight">
-							<i class="fas fa-check"></i>
-						</div>
-					</div> -->
 				</div>
 			</div>
 		</div>
@@ -64,9 +55,9 @@
 			</div>
 		</div>
 		<!-- clear Btn -->
-		<!-- <button class="btnClear" onclick="clearSavedData()" type="button">
+		<button class="btnClear" onclick="clearSavedData()" type="button">
 		 	Clear saved data <i class="fas fa-trash-alt" type="button"></i>
-		</button> -->
+		</button>
 
 	</div>
 	
