--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 			</div>
 		</div>
 		<!-- clear Btn -->
-		<button class="btnClear" onclick="clearSavedData()" type="button">
+		<!-- <button class="btnClear" onclick="clearSavedData()" type="button">
 		 	Clear saved data <i class="fas fa-trash-alt" type="button"></i>
-		</button>
+		</button> -->
 
 	</div>
 	
